Fixing button align

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -40,6 +40,8 @@
 }
 
 .cards.training .cards-card-body > ul li {
+  display: flex;
+  flex-direction: column;
   flex: 1;
 }
 
@@ -67,24 +69,21 @@ progress::-webkit-progress-bar {
 
 @media (width > 768px) {
   .cards > ul > li {
+    display: flex;
+    flex-direction: column;
     flex: 1;
   }
 }
 
 .cards .cards-card-body {
   margin: 16px;
-  min-height: 15rem;
-}
-
-@media (width > 1280px) {
-  .cards .cards-card-body {
-     min-height: 13.25rem;
-  }
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .cards .cards-card-body .button-container {
-  position: absolute;
-  bottom: 0;
+  margin-top: auto;
 }
 
 .cards .cards-card-body strong {
